Изменение цветов, фиксы ошибок

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -15,6 +15,15 @@ $blue: #4491ce;
 $blue-two: #4090d0;
 $blue-three: #317fbc;
 
+$gold: #b0946c;
+$light-gold: #cfa76f;
+$very-light-gold: #ddb57c;
+
+$beige: #e5c69b;
+$light-beige: #f5d9b1;
+$light-beige-two: #ffeacc;
+$light-beige-three: #ffefd9;
+
 $light-green: #4cd964;
 $green: #00ff46;
 
